Ajout de la gestion des certificats. Le role_secretaire permet de créer et affecter des numéros de série aux controlleurs.

--- a/app/Resources/views/centre/menu.html.twig
+++ b/app/Resources/views/centre/menu.html.twig
@@ -23,6 +23,10 @@
         <a class="nav-link {% block menu_affectationpiste_actif %}{% endblock %}" href="{{ path('admin_gestion_affectationpiste_index') }}">
             <i class="nav-icon fa fa-road"></i> Affectation aux pistes</a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link {% block menu_affectationcertificat_actif %}{% endblock %}" href="{{ path('centre_certificat') }}">
+            <i class="nav-icon fa fa-ticket"></i> Affectation des certificats</a>
+    </li>
     <li class="nav-item nav-dropdown {% block menu_historiques_open %}{% endblock %}">
         <a class="nav-link nav-dropdown-toggle" href="#">
             <i class="nav-icon fa fa-bar-chart"></i> Historique</a>
