--- a/app/Resources/views/centre/ouverture.html.twig
+++ b/app/Resources/views/centre/ouverture.html.twig
@@ -7,6 +7,7 @@
 {% block ariane -%}
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="{{ path('homepage') }}">Accueil</a></li>
+        <li class="breadcrumb-item"><a href="{{ path('admin_gestion_centre_index') }}">Centre</a></li>
         <li class="breadcrumb-item">Ouverture/Fermeture du centre</li>
     </ol>
 {% endblock %}
