--- a/app/Resources/views/certificat/centre.html.twig
+++ b/app/Resources/views/certificat/centre.html.twig
@@ -1,58 +1,35 @@
 {% extends '::base.html.twig' %}
-
-{% block menu_certificats_actif %}active{% endblock %}
+{% block menu -%}
+{% embed  '::centre/menu.html.twig' %}
+{% block menu_affectationcertificat_actif %}active{% endblock %}
+{% endembed %}
+{% endblock %}
 {% block ariane -%}
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="{{ path('homepage') }}">Accueil</a></li>
-        <li class="breadcrumb-item"><a href="{{ path('centre_certificat') }}">Certificats</a></li>
-        <li class="breadcrumb-item">Liste</li>
+        <li class="breadcrumb-item"><a href="{{ path('admin_gestion_centre_index') }}">Centre</a></li>
+        <li class="breadcrumb-item">certificats</li>
     </ol>
 {% endblock %}
+{% block menu_gestion_actif %}active{% endblock %}
 {% block pagetitle -%}GESTION DES CERTIFICATS{% endblock %}
-{% block actions %}
-    {% if is_granted('ROLE_CHEF_CENTRE') %} 
-        <label class="btn btn-outline-secondary"><a href="{{ path('centre_certificat_affecter', { 'id': lot }) }}">AFFECTER</a></label>
-    {% endif %}
-{% endblock %}
 {% block body -%}
     <div class="table-responsive">
         <table id="liste_clients" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered datatable dataTable no-footer">
             <thead>
             <tr>
                 <th>Serie</th>
+                <th>Quantité</th>
+                <th>Attributeur</th>
                 <th>Controleur</th>
-                <th>Dernière modification</th>
-                <th>Date de dernière modification</th>
+                <th>Date attribution</th>
+                <th>Valider</th>
+                <th>Nbr annulé</th>
                 <th>Actions</th>
             </tr>
         </thead>
         <tbody>
-        {% for certificat in certificats %}
-            {% if certificat.utilise %}
-                {%  set color = "green" %}
-                {%  set title = "Utilisé" %}
-                {%  set cancel = false %}
-            {% elseif certificat.annule %}
-                {%  set color = "red" %}
-                {%  set title = "Annulé" %}
-                {%  set cancel = false %}
-            {% else %}
-                {%  set color = "" %}
-                {%  set cancel = true %}
-                {%  set title = "" %}
-            {% endif %}
-            <tr style="color: {{ color }}" title="{{ title }}">
-                <td>{{ certificat.serie }}</td>
-                <td>{{ certificat.controlleur }}</td>
-                <td>{{ certificat.modifierPar }}</td>
-                <td>{% if certificat.dateModification %}{{ certificat.dateModification|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>
-                    {% if cancel %}
-                        <a class='btn btn-edit' title="Annuler" href="{{ path('secretaire_certificat_annuler', { 'id': certificat.id }) }}" onclick='return confirm("Vous allez annuler le certificat {{ certificat.serie }}. Merci de confirmer")'><i class='fa fa-ban'></i></a>
-                    {% endif %}
-                </td>
-            </tr>
-        {% endfor %}
+        
         </tbody>
     </table>
     </div>
@@ -64,6 +41,11 @@
     $(document).ready(function() {
 
         $('#liste_clients').DataTable({
+            "processing": true,
+            "serverSide": true,
+            "ajax": {
+                "url": "{{ path('centrecertificatajax') }}",
+            },
         
         "paging" : true,
         "info" : true, 
