--- a/app/Resources/views/certificat/new.html.twig
+++ b/app/Resources/views/certificat/new.html.twig
@@ -5,10 +5,10 @@
     <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="{{ path('homepage') }}">Accueil</a></li>
           <li class="breadcrumb-item"><a href="{{ path('secretaire_certificat_index') }}">Certificats</a></li>
-          <li class="breadcrumb-item">AFFECTER</li>
+          <li class="breadcrumb-item">CREER</li>
         </ol>
 {% endblock %}
-{% block pagetitle -%}AFFECTER DES CERTIFICATS{% endblock %}
+{% block pagetitle -%}CREER UN LOT DE CERTIFICATS{% endblock %}
 {% block actions %} 
     <label class="btn btn-outline-secondary"><a href="{{ path('secretaire_certificat_index') }}">RETOUR A LA LISTE</a></label>
 {% endblock %}
