Ajout des controles actifs uniquement si maha est offline.

--- a/app/Resources/views/controle/index.html.twig
+++ b/app/Resources/views/controle/index.html.twig
@@ -32,22 +32,13 @@
                     <th>Code</th>
                     <th>Type</th>
                     <th>ETAT</th>
+                    <th>OFFLINE</th>
                     <th>Actions</th>
                 </tr>
             </thead>
             <tbody>
             
             </tbody>
-            <thead>
-                <tr>
-                    <th>Catégorie</th>
-                    <th>Libellé</th>
-                    <th>Code</th>
-                    <th>Type</th>
-                    <th>ETAT</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
         </table>
     </div>
 {% endblock %}
