Ajout d'un check de secyrité pour éviter de bypasser le controle maha Cangement de 'interface d'ffectation des certificats aux controleurs

--- a/app/Resources/views/certificat/centre.html.twig
+++ b/app/Resources/views/certificat/centre.html.twig
@@ -20,11 +20,11 @@
             <tr>
                 <th>Serie</th>
                 <th>Quantité</th>
-                <th>Attributeur</th>
-                <th>Controleur</th>
+                <th>Disponible</th>
+                <th>Attribué</th>
+                <th>Annulé</th>
                 <th>Date attribution</th>
-                <th>Valider</th>
-                <th>Nbr annulé</th>
+                <th>Attributeur</th>
                 <th>Actions</th>
             </tr>
         </thead>
