--- a/app/Resources/views/certificat/indexAgent.html.twig
+++ b/app/Resources/views/certificat/indexAgent.html.twig
@@ -24,6 +24,7 @@
                 <th>Controleur</th>
                 <th>Date attribution</th>
                 <th>Statut</th>
+                <th>Vehicule</th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -48,6 +49,7 @@
                 <td>{{ certificat.controlleur }}</td>
                 <td>{% if certificat.dateModification %}{{ certificat.dateModification|date('Y-m-d H:i:s') }}{% endif %}</td>
                 <td>{% if certificat.annule %}Annulé{% else %}Actif{% endif %}</td>
+                <td>{{ certificat.immatriculation }}</td>
                 <td>
                     {% if cancel %}
                         <a class='btn btn-edit' title="Annuler" href="{{ path('secretaire_certificat_annuler', { 'id': certificat.id }) }}" onclick='return confirm("Vous allez annuler le certificat {{ certificat.serie }}. Merci de confirmer")'><i class='fa fa-ban'></i></a>
