--- a/app/Resources/views/piste/index.html.twig
+++ b/app/Resources/views/piste/index.html.twig
@@ -18,7 +18,7 @@
 
 {% block actions %}
     <label class="btn btn-outline-secondary"><a href="{{ path('piste_export') }}">EXPORTER</a></label>
-    {% if is_granted('ROLE_CAISSIER_PRINCIPAL') %} 
+    {% if is_granted('ROLE_CHEF_CENTRE') %} 
         <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_piste_new') }}">CREER</a></label>
     {% endif %}
 {% endblock %}
