--- a/app/Resources/views/visite/show.delivrance.html.twig
+++ b/app/Resources/views/visite/show.delivrance.html.twig
@@ -59,7 +59,7 @@
 <div style='margin-bottom:15px'>
     <span style="font-weight: bolder">N&deg; de chassis : {{ visite.vehicule.chassis }}</span>
 </div>
-<table border="1" style="width:1050px;" cellpadding="0" cellspacing="0">
+<table border="1" style="width:100%;" cellpadding="0" cellspacing="0">
     <tbody>
         <tr>
             <td>Bilan de la visite technique</td>
