--- a/app/Resources/views/visite/show.html.twig
+++ b/app/Resources/views/visite/show.html.twig
@@ -73,7 +73,7 @@
 <div style='margin-bottom:15px'>
     <span style="font-weight: bolder">N&deg; de chassis : {{ visite.vehicule.chassis }}</span>
 </div>
-<table border="1" style="width:1050px;" cellpadding="0" cellspacing="0">
+<table border="1" style="width:100%;" cellpadding="0" cellspacing="0">
     <tbody>
         <tr>
             <td>Bilan de la visite technique</td>
@@ -112,7 +112,7 @@
      </tbody>
 </table>
 <div style='margin-top:15px'>
-     Controle effctué par {{ visite.controlleur }}
+     Controle effectué par {{ visite.controlleur }}
 </div>
 <div style='margin-top:25px'>
     <span>RESULTAT DU CONTROLE VALABLE POUR LA CIRCULATION DU VEHICULE PENDANT {{ visite.vehicule.typeVehicule.delai }} JOURS SANS CERTIFICAT DE VISITE TECHNIQUE</span>
