Ajout d'un check de secyrité pour éviter de bypasser le controle maha Cangement de 'interface d'ffectation des certificats aux controleurs

--- a/app/Resources/views/certificat/annuler.html.twig
+++ b/app/Resources/views/certificat/annuler.html.twig
@@ -1,1 +1,7 @@
 {{ message }}
+{% if input == true %}
+    <form method='POST' action='{{ path('secretaire_certificat_annuler',{ 'id': id }) }}'>
+    <br/>Motif : <input type="text" name="motif" required />
+    <br/> <br/><input type="submit" value="Confirmer" />
+    </form
+{% endif %}
