--- a/app/Resources/views/centre/menu.html.twig
+++ b/app/Resources/views/centre/menu.html.twig
@@ -23,9 +23,19 @@
         <a class="nav-link {% block menu_affectationpiste_actif %}{% endblock %}" href="{{ path('admin_gestion_affectationpiste_index') }}">
             <i class="nav-icon fa fa-road"></i> Affectation aux pistes</a>
     </li>
-    <li class="nav-item">
-        <a class="nav-link {% block menu_affectationcertificat_actif %}{% endblock %}" href="{{ path('centre_certificat') }}">
-            <i class="nav-icon fa fa-ticket"></i> Affectation des certificats</a>
+    <li class="nav-item nav-dropdown {% block menu_certificats_open %}{% endblock %}">
+        <a class="nav-link nav-dropdown-toggle" href="#">
+            <i class="nav-icon fa fa-bar-chart"></i> Certificats</a>
+            <ul class="nav-dropdown-items">
+                <li class="nav-item">
+                    <a class="nav-link {% block menu_affectationcertificat_actif %}{% endblock %}" href="{{ path('centre_certificat') }}">
+                        <i class="nav-icon fa fa-ticket"></i> Lots</a>
+                </li>
+               <li class="nav-item">
+                    <a class="nav-link {% block menu_rapportcertificat_actif %}{% endblock %}" href="{{ path('centre_certificat') }}">
+                        <i class="nav-icon fa fa-ticket"></i> Rapport</a>
+                </li>
+            </ul>
     </li>
     <li class="nav-item nav-dropdown {% block menu_historiques_open %}{% endblock %}">
         <a class="nav-link nav-dropdown-toggle" href="#">
