--- a/app/Resources/views/certificat/indexAgent.html.twig
+++ b/app/Resources/views/certificat/indexAgent.html.twig
@@ -16,6 +16,7 @@
 
 {% endblock %}
 {% block body -%}
+    <div id="annuler-modal" title="Confirmation" style="background: #fff;z-index: 10"> </div>
     <div class="table-responsive">
         <table id="liste_clients" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered datatable dataTable no-footer">
             <thead>
@@ -34,7 +35,6 @@
         </tbody>
     </table>
     </div>
-<div id="annuler-modal" title="Confirmation"></div>
 {% endblock %}
 
 {% block javascripts -%}
@@ -84,6 +84,7 @@
                    } );  
                                     
         function annulerCertificat(id){
+            
             var options = {
                 modal: true,
                 height:300,
