--- a/app/Resources/views/certificat/index.html.twig
+++ b/app/Resources/views/certificat/index.html.twig
@@ -30,7 +30,7 @@
         <tbody>
         {% for lot in lots %}
             <tr>
-                <td>{{ lot.serie }}</td>
+                <td>({{ lot.annee }}) {{ lot.serie }}</td>
                 <td>{{ lot.quantite }}</td>
                 <td>{{ lot.attributeur }}</td>
                 <td>{{ lot.chefCentre }}</td>
